--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "author": "Felix Gnass <fgnass@cellular.de>",
   "license": "MIT",
-  "main": "variation.js",
+  "main": "index.js",
   "scripts": {
     "test": "jest",
     "docs": "documentation readme index.js --section API",
